test/negative/class_no_method.mut
# Negative: call non-existent method on class

class Point
    x: i64
    y: i64
    def init(self, x: i64, y: i64)
        self.x = x
        self.y = y
    end
end

p := Point(1, 2)
p.foo()
